# web42-marketplace

./: .env.example  .gitignore  check-agent-columns.js  cleanup-agents.js  middleware.ts  next.config.js  openclaw-multi-agent.md  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
.learnings/: ERRORS.md  FEATURE_REQUESTS.md  LEARNINGS.md
app/: error.tsx  global-error.tsx  globals.css  layout.tsx  manifest.ts  not-found.tsx  opengraph-image.tsx  page.tsx  providers.tsx  robots.ts  sitemap.ts
backup-agents/: agent-3.json  agent-5.json
components/: agent-card.tsx  agent-delete-button.tsx  agent-detail-tabs.tsx  agent-details-editor.tsx  agent-grid.tsx  agent-license-select.tsx  agent-price-badge.tsx  agent-price-editor.tsx  agent-profile-image.tsx  agent-repo-view.tsx  agent-resource-upload.tsx  agent-results-skeleton.tsx  agent-results.tsx  agent-search.tsx  agent-showcase.tsx  agent-tag-manager.tsx  agent-visibility-toggle.tsx  category-pill.tsx  checkout-success.tsx  creator-filter.tsx  docs-sidebar.tsx  explore-filters.tsx  explore-pagination.tsx  featured-carousel.tsx  file-browser.tsx  file-viewer.tsx  forward-ref-editor.tsx  get-agent-button.tsx  hero.tsx  install-button.tsx  install-snippet.tsx  login-hero.tsx  markdown-editor.tsx  markdown-renderer.tsx  marketplace-nav.tsx  nav.tsx  pixel-art.tsx  platform-filter.tsx  platform-logo.tsx  (+23 more)
sdk/python/: .gitignore  README.md  pyproject.toml
sdk/python/web42_auth/: __init__.py  a2a.py  client.py
sdk/python/web42_auth/middleware/: __init__.py  fastapi.py  flask.py
(+145 files in other folders)
